--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#variables">Variables</a></li>
             <li><a href="#dec-variable">Declaring Variables</a></li>
             <li><a href="#scope">Variable scope</a></li>
+            <li><a href="#Global_variables">Global variables</a></li>
             <li><a href="#ref">Referrence</a></li>
         </ul>
     </nav>
@@ -86,8 +87,12 @@
             <p>This behavior changes, when using the let declaration introduced in ECMAScript 2015. </p>
             <p class="code"><code>if (true) { let y = 5; } console.log(y); // ReferenceError: y is
                 not defined</code></p>
+        </section><hr>
+        <section class="main-section" id="Global_variables">
+            <header>Global variables</header>
+            <p>Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax. </p>
+            <p>Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber. </p>
         </section>
-        
         <hr>
     </main>
 </body>
