--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="#dec-variable">Declaring Variables</a></li>
             <li><a href="#scope">Variable scope</a></li>
             <li><a href="#Global_variables">Global variables</a></li>
+            <li><a href="#Constants">Constants</a></li>
             <li><a href="#ref">Referrence</a></li>
         </ul>
     </nav>
@@ -90,6 +91,20 @@
             <p>Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber. </p>
         </section>
         <hr>
+        <section class="main-section" id="Constants">
+            <header>Constants</header>
+            <p> You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters. </p>
+            <p class="code"><code>const PI = 3.14;</code></p>
+            <p>A constant cannot change value through assignment or be re-declared while the script is running. It has to be initialized to a value. </p>
+            <p>The scope rules for constants are the same as those for let block scope variables. If the const keyword is omitted, the identifier is assumed to represent a variable. </p>
+            <p>You cannot declare a constant with the same name as a function or variable in the same scope. For example: </p>
+            <p class="code"><code>// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; <br>// THIS
+                WILL CAUSE AN ERROR ALSO function f() <br> { const g = 5; var g;
+                //statements }</code></p>
+                <p>However, object attributes are not protected, so the following statement is executed without problems. </p>
+                <p class="code"><code>const MY_OBJECT = {"key": "value"}; <br> MY_OBJECT.key =
+                    "otherValue";</code></p>
+        </section><hr>
         <section class="main-section" id="ref">
             <header>Referrence</header>
             <ul><li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide">MDN</a></li></ul>
