--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#scope">Variable scope</a></li>
             <li><a href="#Global_variables">Global variables</a></li>
             <li><a href="#Constants">Constants</a></li>
+            <li><a href="#Data_types">Data types</a></li>
             <li><a href="#ref">Referrence</a></li>
         </ul>
     </nav>
@@ -104,6 +105,23 @@
                 <p>However, object attributes are not protected, so the following statement is executed without problems. </p>
                 <p class="code"><code>const MY_OBJECT = {"key": "value"}; <br> MY_OBJECT.key =
                     "otherValue";</code></p>
+        </section><hr>
+        <section class="main-section" id="Data_types">
+            <header>Data types</header>
+            <ul>The latest ECMAScript standard defines seven data types: <BR></BR>
+                <li>Six data types that are primitives:
+                    <ul class="types">
+                        <li>Boolean. true and false.</li>
+                        <li>null. A special keyword denoting a null value. Because JavaScript is case-sensitive, null is not the same as Null, NULL, or any other variant. </li>
+                        <li>undefined. A top-level property whose value is undefined. </li>
+                        <li>Number. 42 or 3.14159.</li>
+                        <li>String. "Howdy"</li>
+                        <li>Symbol (new in ECMAScript 2015). A data type whose instances are unique and immutable. </li>
+                    </ul>
+                    <li>and Object</li>
+                </li>
+            </ul>
+            <p>Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
         </section><hr>
         <section class="main-section" id="ref">
             <header>Referrence</header>
