--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#Global_variables">Global variables</a></li>
             <li><a href="#Constants">Constants</a></li>
             <li><a href="#Data_types">Data types</a></li>
+            <li><a href="#if...else statement">if...else statement</a></li>
             <li><a href="#ref">Referrence</a></li>
         </ul>
     </nav>
@@ -122,6 +123,28 @@
                 </li>
             </ul>
             <p>Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
+        </section><hr>
+        <section class="main-section" id="if...else statement">
+             <header>if...else statement</header>
+             <p>Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows: </p>
+             <p class="code"><code>if (condition) { statement_1; } else { statement_2; }</code></p>
+             <p>condition can be any expression that evaluates to true or false. See Boolean for an explanation of what evaluates to true and false. If condition evaluates to true, statement_1 is executed; otherwise, statement_2 is executed. statement_1 and statement_2 can be any statement, including further nested if statements. </p>
+             
+             <p>You may also compound the statements using else if to have multiple conditions tested in sequence, as follows: </p>
+             <p class="code"><code>if (condition_1) { statement_1; } else if (condition_2) {
+                statement_2; } else if (condition_n) { statement_n; } else {
+                statement_last; }
+              </code></p>
+              <p>In the case of multiple conditions only the first logical condition which evaluates to true will be executed. To execute multiple statements, group them within a block statement ({ ... }) . In general, it's good practice to always use block statements, especially when nesting if statements:
+            </p>
+            <p class="code"><code>if (condition) { statement_1_runs_if_condition_is_true;
+                statement_2_runs_if_condition_is_true; } else {
+                statement_3_runs_if_condition_is_false;
+                statement_4_runs_if_condition_is_false; }</code></p>
+                <p>It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused with equality when glancing over the code. For example, do not use the following code: </p>
+                <p class="code"><code>if (x = y) { /* statements here */ }</code></p>
+                <p>If you need to use an assignment in a conditional expression, a common practice is to put additional parentheses around the assignment. For example: </p>
+                <p class="code"><code>if ((x = y)) { /* statements here */ }</code></p>
         </section><hr>
         <section class="main-section" id="ref">
             <header>Referrence</header>
