--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="#Data_types">Data types</a></li>
             <li><a href="#if...else statement">if...else statement</a></li>
             <li><a href="#while_statement">while statement</a></li>
+            <li><a href="#Function_declarations">Function declarations</a></li>
             <li><a href="#ref">Referrence</a></li>
         </ul>
     </nav>
@@ -162,6 +163,20 @@
                 <li>After the third pass: n = 3 and x = 6</li>
             </ul>
             <p>After completing the third pass, the condition n < 3 is no longer true, so the loop terminates. </p>
+        </section><hr>
+        <section class="main-section" id="Function_declarations">
+            <header>Function declarations</header>
+            <p>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by: </p>
+            <ul>
+                <li>The name of the function.</li>
+                <li>A list of arguments to the function, enclosed in parentheses and separated by commas.</li>
+                <li>The JavaScript statements that define the function, enclosed in curly brackets, { }. </li>
+            </ul>
+            <p>For example, the following code defines a simple function named square: </p>
+            <p class="code"><code>function square(number) { return number * number; }</code></p>
+            <p>The function square takes one argument, called number. The function consists of one statement that says to return the argument of the function (that is, number) multiplied by itself. The return statement specifies the value returned by the function. </p>
+            <p class="code"><code>return number * number;</code></p>
+            <p>Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function. </p>
         </section><hr>
         <section class="main-section" id="ref">
             <header>Referrence</header>
